@@ -1,9 +1,7 @@
 package capstone_1.Ecotrack_backend.controller.user;
 
-import capstone_1.Ecotrack_backend.dto.response.ApiBadgeResponse;
 import capstone_1.Ecotrack_backend.dto.response.BadgeResponse;
 import capstone_1.Ecotrack_backend.service.BadgeService;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -11,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
@@ -46,9 +43,9 @@ class BadgeControllerTest {
         @Test
         @DisplayName("Trả về 200 và data là list BadgeResponse")
         void getAllBadges_returns200WithData() throws Exception {
-            List<BadgeResponse> data = Arrays.asList(
-                    new BadgeResponse(1L, "Starter", "/icon1.png", "Desc 1", "Req 1", 0, null, false),
-                    new BadgeResponse(2L, "Hero", "/icon2.png", "Desc 2", "Req 2", 0, null, false)
+            List<BadgeResponse> data = List.of(
+                    new BadgeResponse(1L, "Starter", "/icon1.png", "Desc 1", "Req 1", 10, null, false),
+                    new BadgeResponse(2L, "Hero", "/icon2.png", "Desc 2", "Req 2", 50, null, false)
             );
             when(badgeService.getAllBadges()).thenReturn(data);
 
@@ -59,7 +56,8 @@ class BadgeControllerTest {
                     .andExpect(jsonPath("$.message").value("Lấy danh sách huy hiệu thành công"))
                     .andExpect(jsonPath("$.data").isArray())
                     .andExpect(jsonPath("$.data[0].badgeId").value(1))
-                    .andExpect(jsonPath("$.data[0].badgeName").value("Starter"));
+                    .andExpect(jsonPath("$.data[0].badgeName").value("Starter"))
+                    .andExpect(jsonPath("$.data[0].pointsRequired").value(10));
 
             verify(badgeService).getAllBadges();
         }
@@ -83,9 +81,9 @@ class BadgeControllerTest {
         @DisplayName("User hợp lệ → 200 và data là list BadgeResponse")
         void getMyBadges_whenUserIdPresent_returns200WithData() throws Exception {
             Long userId = 10L;
-            List<BadgeResponse> data = Arrays.asList(
-                    new BadgeResponse(1L, "Starter", "/icon1.png", "Desc 1", "Req 1", 0, "2025-03-01T10:00:00", true),
-                    new BadgeResponse(2L, "Hero", "/icon2.png", "Desc 2", "Req 2", 0, "2025-03-02T11:30:00", true)
+            List<BadgeResponse> data = List.of(
+                    new BadgeResponse(1L, "Starter", "/icon1.png", "Desc 1", "Req 1", 10, "2025-03-01T10:00:00", true),
+                    new BadgeResponse(2L, "Hero", "/icon2.png", "Desc 2", "Req 2", 50, "2025-03-02T11:30:00", true)
             );
 
             when(badgeService.getUserEarnedBadges(userId)).thenReturn(data);
@@ -99,6 +97,8 @@ class BadgeControllerTest {
                     .andExpect(jsonPath("$.data").isArray())
                     .andExpect(jsonPath("$.data[0].badgeId").value(1))
                     .andExpect(jsonPath("$.data[0].badgeName").value("Starter"))
+                    .andExpect(jsonPath("$.data[0].pointsRequired").value(10))
+                    .andExpect(jsonPath("$.data[0].isClaimed").value(true))
                     .andExpect(jsonPath("$.data[0].awardedAt").value("2025-03-01T10:00:00"));
 
             verify(badgeService).getUserEarnedBadges(userId);
@@ -119,4 +119,3 @@ class BadgeControllerTest {
         }
     }
 }
-
